--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ja" dir="ltr">
 
 <head>
-    <meta name="author" content="">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>HALCinema</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css">
     <link rel="stylesheet" type="text/css" href="./css/slider.css">
