--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css">
-    <link rel="stylesheet" type="text/css" href="./css/slider.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./css/slider.css"> -->
     <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="./js/hamburger.js"></script>
 </head>
@@ -28,10 +28,9 @@
             <nav>
                 <ul id="navigation">
                     <li><a href="#">トップページ</a></li>
-                    <li><a href="#">上映予定作品</a></li>
+                    <li><a href="#">上映中作品</a></li>
                     <li><a href="#">公開予定作品</a></li>
                     <li><a href="#">アンケート</a></li>
-                    <li><a href="#">料金表</a></li>
                     <li><a href="#">アクセス</a></li>
                     <li><a href="#">お問い合わせ</a></li>
                 </ul>
@@ -42,15 +41,15 @@
     <div id="container">
         <div id="slider">
             <section class="s-wrap">
-                <div class="box">
+                <!-- <div class="box">
                     <img src="./img/Alien.jpg" alt="topScroll" class="slide-item">
-                </div>
+                </div> -->
                 <div class="box">
                     <img src="./img/thesha.jpg" alt="topScroll" class="slide-item">
                 </div>
-                <div class="box">
+                <!-- <div class="box">
                     <img src="./img/Godfather.png" alt="topScroll" class="slide-item">
-                </div>
+                </div> -->
             </section>
         </div>
 
