--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </header>
 
-    <div id="container">
+    <table id="container">
         <div id="slider">
             <section class="s-wrap">
                 <!-- <div class="box">
@@ -53,6 +53,12 @@
             </section>
         </div>
 
+        <table class="money">
+            <tr>
+                <th></th>
+            </tr>
+        </table>
+
         <section class="calen">
             <div class="date">
                 <div>（曜日）</div>
@@ -61,11 +67,11 @@
                 </div>
             </div>
         </section>
-    </div>
+        </div>
 
-    <footer>
-        <p>copyright &copy; 2019 HAL Cinema</p>
-    </footer>
+        <footer>
+            <p>copyright &copy; 2019 HAL Cinema</p>
+        </footer>
 </body>
 
 </html>
