--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
+	<link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css">
-    <!-- <link rel="stylesheet" type="text/css" href="./css/slider.css"> -->
+	<link rel="stylesheet" type="text/css" href="./css/slider.css">
+	<link rel="stylesheet" type="text/css" href="./css/contact.css">
     <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="./js/hamburger.js"></script>
 </head>
@@ -28,36 +29,31 @@
             <nav>
                 <ul id="navigation">
                     <li><a href="#">トップページ</a></li>
-                    <li><a href="#">上映中作品</a></li>
+                    <li><a href="#">上映予定作品</a></li>
                     <li><a href="#">公開予定作品</a></li>
                     <li><a href="#">アンケート</a></li>
+                    <li><a href="#">料金表</a></li>
                     <li><a href="#">アクセス</a></li>
-                    <li><a href="contact.html">お問い合わせ</a></li>
+                    <li><a href="#">お問い合わせ</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <table id="container">
+    <div id="container">
         <div id="slider">
             <section class="s-wrap">
-                <!-- <div class="box">
+                <div class="box">
                     <img src="./img/Alien.jpg" alt="topScroll" class="slide-item">
-                </div> -->
+                </div>
                 <div class="box">
                     <img src="./img/thesha.jpg" alt="topScroll" class="slide-item">
                 </div>
-                <!-- <div class="box">
+                <div class="box">
                     <img src="./img/Godfather.png" alt="topScroll" class="slide-item">
-                </div> -->
+                </div>
             </section>
         </div>
-
-        <table class="money">
-            <tr>
-                <th></th>
-            </tr>
-        </table>
 
         <section class="calen">
             <div class="date">
@@ -67,11 +63,10 @@
                 </div>
             </div>
         </section>
-        </div>
+    </div>
 
-        <footer>
-            <p>copyright &copy; 2019 HAL Cinema</p>
-        </footer>
+    <footer>
+        <p>copyright &copy; 2019 HAL Cinema</p>
+    </footer>
 </body>
-
 </html>
