--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css">
+    <link rel="stylesheet" type="text/css" href="./css/top.css">
     <!-- <link rel="stylesheet" type="text/css" href="./css/slider.css"> -->
     <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="./js/hamburger.js"></script>
@@ -38,7 +39,7 @@
         </div>
     </header>
 
-    <table id="container">
+    <div id="container">
         <div id="slider">
             <section class="s-wrap">
                 <!-- <div class="box">
@@ -53,11 +54,23 @@
             </section>
         </div>
 
-        <table class="money">
-            <tr>
-                <th></th>
-            </tr>
-        </table>
+        <section id="money">
+            <h2>料金表</h2>
+            <table>
+                <tr>
+                    <th>大人</th>
+                    <td>1000円</td>
+                </tr>
+                <tr>
+                    <th>学生</th>
+                    <td>800円</td>
+                </tr>
+                <tr>
+                    <th>子供（〜中学生）</th>
+                    <td>500円</td>
+                </tr>
+            </table>
+        </section>
 
         <section class="calen">
             <div class="date">
@@ -67,11 +80,11 @@
                 </div>
             </div>
         </section>
-        </div>
+    </div>
 
-        <footer>
-            <p>copyright &copy; 2019 HAL Cinema</p>
-        </footer>
+    <footer>
+        <p>copyright &copy; 2019 HAL Cinema</p>
+    </footer>
 </body>
 
 </html>
