indexが少し変更中と、DBの基礎モデル（numbers）

--- a/index.html
+++ b/index.html
@@ -66,88 +66,12 @@
             </table>
         </section>
 
-        <div class="calen">
+        <section class="calen">
             <h2>上映カレンダー</h2>
-            <article>
-                <div>9月19日（木）Aスクリーン</div>
-                <div class="date">
-                    <div class="movies">
-                        <div class="time">
-                            10:30~13:00
-                        </div>
-                        <div class="name">
-                            ブラックパンサー
-                        </div>
-                    </div>
-
-                    <div class="movies">
-                        <div class="time">
-                            13:30~15:45
-                        </div>
-                        <div class="name">
-                            ヴェノム
-                        </div>
-                    </div>
-
-                    <div class="movies">
-                        <div class="time">
-                            16:15~18:30
-                        </div>
-                        <div class="name">
-                            ジュラシックワールド 炎...
-                        </div>
-                    </div>
-                    <div class="movies">
-                        <div class="time">
-                            19:00~21:00
-                        </div>
-                        <div class="name">
-                            ランペイジ 巨獣大乱闘
-                        </div>
-                    </div>
-                </div>
-            </article>
-
-            <article>
-                <div>9月19日（木）Bスクリーン</div>
-                <div class="date">
-                    <div class="movies">
-                        <div class="time">
-                            10:15~12:30
-                        </div>
-                        <div class="name">
-                            ワイルド・スピード ICE...
-                        </div>
-                    </div>
-
-                    <div class="movies">
-                        <div class="time">
-                            13:00~15:15
-                        </div>
-                        <div class="name">
-                            美女と野獣
-                        </div>
-                    </div>
-
-                    <div class="movies">
-                        <div class="time">
-                            15:45~18:15
-                        </div>
-                        <div class="name">
-                            ワンダーウーマン
-                        </div>
-                    </div>
-                    <div class="movies">
-                        <div class="time">
-                            18:30~20:45
-                        </div>
-                        <div class="name">
-                            キングコング：髑髏島...
-                        </div>
-                    </div>
-                </div>
-            </article>
-        </div>
+            <div>
+                <h3>ジュラシックワールド　炎の王国</h3>
+                <div></div>
+            </div>
         </section>
     </div>
 
