ssh接続テスト

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2>上映カレンダー</h2>
             <div>
                 <h3>ジュラシックワールド　炎の王国</h3>
-                <div></div>
+                <div>10:30~13:00</div>
             </div>
         </section>
     </div>
