ロードショウ作成

--- a/roadshow.html
+++ b/roadshow.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap"
           rel="stylesheet">
-    <!--    <link rel="stylesheet" type="text/css" href="./css/index.css">-->
+    <link rel="stylesheet" type="text/css" href="./css/unity.css">
+    <link rel="stylesheet" type="text/css" href="./css/roadshow.css">
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css">
     <!-- <link rel="stylesheet" type="text/css" href="./css/slider.css"> -->
     <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
@@ -16,6 +17,7 @@
 
 <body>
 <header>
+    <h1>HAL Cinema</h1>
     <div id="nav-toggle">
         <div>
             <span></span>
@@ -37,12 +39,98 @@
     </div>
 </header>
 
-<h1>上映予定映画</h1>
+<h2>上映予定映画</h2>
 <article class="movie-list">
     <ul>
         <li>
-            <div>
-            </div>
+            <section>
+                <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
+                    <div class="hidden">ゴッドファーザー</div>
+                </div>
+                <div>
+                    <h3>ゴッドファーザー</h3>
+                    <div>
+                        <p>
+                            第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                            屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                            違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                            太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </li>
+        <li>
+            <section>
+                <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
+                    <div class="hidden">ゴッドファーザー</div>
+                </div>
+                <div>
+                    <h3>ゴッドファーザー</h3>
+                    <div>
+                        <p>
+                            第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                            屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                            違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                            太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </li>
+        <li>
+            <section>
+                <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
+                    <div class="hidden">ゴッドファーザー</div>
+                </div>
+                <div>
+                    <h3>ゴッドファーザー</h3>
+                    <div>
+                        <p>
+                            第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                            屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                            違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                            太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </li>
+        <li>
+            <section>
+                <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
+                    <div class="hidden">ゴッドファーザー</div>
+                </div>
+                <div>
+                    <h3>ゴッドファーザー</h3>
+                    <div>
+                        <p>
+                            第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                            屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                            違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                            太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </li>
+        <li>
+            <section>
+                <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
+                    <div class="hidden">ゴッドファーザー</div>
+                </div>
+                <div>
+                    <h3>ゴッドファーザー</h3>
+                    <div>
+                        <p>
+                            第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                            屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                            違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                            太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                        </p>
+                    </div>
+                </div>
+            </section>
         </li>
     </ul>
 </article>
