時間案内追加

--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
 
         <section class="time">
             <h2>時間案内</h2>
-            <div class=""></div>
+            <div class="sche">
+                <div>開館時間 : 10:00</div>
+                <div>閉館時間 : 21:00</div>
+            </div>
         </section>
     </div>
 
