--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul id="navigation">
                     <li><a href="#">トップページ</a></li>
                     <li><a href="roadshow.html">上映中作品</a></li>
-                    <li><a href="#">公開予定作品</a></li>
+                    <li><a href="nextRoadshow.html">公開予定作品</a></li>
                     <li><a href="#">アンケート</a></li>
                     <li><a href="#">アクセス</a></li>
                     <li><a href="contact.html">お問い合わせ</a></li>
