--- a/nextRoadshow.html
+++ b/nextRoadshow.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>HALCinema 上映予定映画</title>
+    <title>HALCinema 公開予定映画</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap"
           rel="stylesheet">
@@ -30,7 +30,7 @@
             <ul id="navigation">
                 <li><a href="index.html">トップページ</a></li>
                 <li><a href="roadshow.html">上映中作品</a></li>
-                <li><a href="#">公開予定作品</a></li>
+                <li><a href="nextRoadshow.html">公開予定作品</a></li>
                 <li><a href="#">アンケート</a></li>
                 <li><a href="#">アクセス</a></li>
                 <li><a href="#">お問い合わせ</a></li>
@@ -39,7 +39,7 @@
     </div>
 </header>
 
-<h2>上映予定映画</h2>
+<h2>公開予定映画</h2>
 <article class="movie-list">
     <ul>
         <li>
