--- a/nextRoadshow.html
+++ b/nextRoadshow.html
@@ -33,7 +33,7 @@
                 <li><a href="nextRoadshow.html">公開予定作品</a></li>
                 <li><a href="#">アンケート</a></li>
                 <li><a href="#">アクセス</a></li>
-                <li><a href="#">お問い合わせ</a></li>
+                <li><a href="contact.html">お問い合わせ</a></li>
             </ul>
         </nav>
     </div>
