--- a/roadshow.html
+++ b/roadshow.html
@@ -30,10 +30,10 @@
             <ul id="navigation">
                 <li><a href="index.html">トップページ</a></li>
                 <li><a href="roadshow.html">上映中作品</a></li>
-                <li><a href="#">公開予定作品</a></li>
+                <li><a href="nextRoadshow.html">公開予定作品</a></li>
                 <li><a href="#">アンケート</a></li>
                 <li><a href="#">アクセス</a></li>
-                <li><a href="#">お問い合わせ</a></li>
+                <li><a href="contact.html">お問い合わせ</a></li>
             </ul>
         </nav>
     </div>
