営業時間完了

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <h3><a href="">アイ　アム　レジェンド</a></h3>
                 <div class="flexbox">
                     <div>13:15 ~</div>
+                    <div>15:30 ~</div>
                 </div>
             </div>
             <div class="movie">
@@ -98,8 +99,12 @@
         <section class="time">
             <h2>時間案内</h2>
             <div class="sche">
-                <div>開館時間 : 10:00</div>
-                <div>閉館時間 : 21:00</div>
+                <div>
+                    開館時間<span>10:00</span>
+                </div>
+                <div>
+                    閉館時間<span>21:00</span>
+                </div>
             </div>
         </section>
     </div>
