--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>HALCinema</title>
+    <title>HAL Cinema</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap"
         rel="stylesheet">
@@ -32,7 +32,7 @@
                     <li><a href="roadshow.html">上映中作品</a></li>
                     <li><a href="nextRoadshow.html">公開予定作品</a></li>
                     <li><a href="#">アンケート</a></li>
-                    <li><a href="#">アクセス</a></li>
+                    <li><a href="access.html">アクセス</a></li>
                     <li><a href="contact.html">お問い合わせ</a></li>
                 </ul>
             </nav>
