--- a/access.html
+++ b/access.html
@@ -9,7 +9,7 @@
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/unity.css">
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css">
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="stylesheet" type="text/css" href="./css/access.css">
     <!-- <link rel="stylesheet" type="text/css" href="./css/slider.css"> -->
     <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="./js/hamburger.js"></script>
@@ -28,17 +28,44 @@
         <div id="gloval-nav">
             <nav>
                 <ul id="navigation">
-                    <li><a href="#">トップページ</a></li>
+                    <li><a href="index.html">トップページ</a></li>
                     <li><a href="roadshow.html">上映中作品</a></li>
                     <li><a href="nextRoadshow.html">公開予定作品</a></li>
                     <li><a href="#">アンケート</a></li>
-                    <li><a href="access.html">アクセス</a></li>
-                    <li><a href="contact.html">お問い合わせ</a></li>
+                    <li><a href="#">アクセス</a></li>
+                    <li><a href=" contact.html">お問い合わせ</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
+    <section>
+        <h2>アクセス</h2>
+        <div class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.80935692062!2d135.5185703154635!3d34.60898198045827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDM2JzMyLjMiTiAxMzXCsDMxJzE0LjciRQ!5e0!3m2!1sja!2sjp!4v1568854874933!5m2!1sja!2sjp"
+                width="100%" height="300px" frameborder="0"></iframe>
+        </div>
+        <div class="about">
+            <h3>施設情報</h3>
+            <div class="add">
+                <h4>住所</h4>
+                <p>〒558-0004　大阪府大阪市住吉区長居東１丁目７−１７</p>
+            </div>
+            <div class="tel">
+                <h4>電話番号</h4>
+                <p>06ー6347ー1818</p>
+            </div>
+            <div class="car">
+                <h4>駐車場・駐輪場</h4>
+                <p>駐車場、駐輪場はないため、公共交通機関ウィご利用ください。</p>
+            </div>
+            <div class="cache">
+                <h4>payment</h4>
+                <p>支払い方法：現金のみ</p>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <p>copyright &copy; 2019 HAL Cinema</p>
