--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
 <body>
 <header>
-    <h1>HAL Cinema</h1>
+    <h1><a href="index.html">HAL Cinema</a></h1>
     <div id="nav-toggle">
         <div>
             <span></span>
