アンケート画面完成

--- a/survey.html
+++ b/survey.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>アンケート</title>
-	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap"
-	rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/unity.css">
-	<link rel="stylesheet" type="text/css" href="./css/hamburger.css">
+	<link rel="stylesheet" type="text/css" href="css/hamburger.css">
 	<link rel="stylesheet" type="text/css" href="css/survey.css">
 	<script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="./js/hamburger.js"></script>
@@ -37,55 +37,49 @@
         </div>
     </header>
 
-	<h2>アンケート</h2>
-
-	<form action="">
-		<table>
-			<tr>
-				<th>メールアドレス</th>
-				<td><input type="email" name="" id="" class="textbox"></td>
-			</tr>
-			<tr>
-				<th>年齢層</th>
-				<td>
-					<select name="" id="" class="textbox">
-						<option value="0">~10代</option>
-						<option value="">20代</option>
-						<option value="">30代</option>
-						<option value="">40代</option>
-						<option value="">50代</option>
-						<option value="">60代</option>
-						<option value="">70代</option>
-						<option value="">80代~</option>
-					</select>
-				</td>
-			</tr>
-			<tr>
-				<th>性別</th>
-				<td>
-					<input type="radio" name="" id="">男性
-					<input type="radio" name="" id="">女性
-				</td>
-			</tr>
-			<tr>
-				<th>映画タイトル</th>
-				<td>
-					<input type="text" name="" id="" class="textbox">
-				</td>
-			</tr>
-			<tr>
-				<th>文</th>
-				<td>
-					<textarea name="" id="" cols="30" rows="10" class="textbox"></textarea>
-				</td>
-			</tr>
-		</table>
-		<button type="submit" class="textbox">送信する</button>
-	</form>
-
+	<section>
+		<h2>アンケート</h2>
+		<form action="">
+			<div class="form-group">
+				<label for="">メールアドレス</label>
+				<input type="email" name="" id="" class="textbox form-control">
+				<small class="text-muted">あなたのメールは他の誰とも共有しません。</small>
+			</div>
+			<div class="form-group">
+				<label for="">年齢層</label>
+				<select name="" id="" class="textbox form-control">
+					<option value="0">~10代</option>
+					<option value="">20代</option>
+					<option value="">30代</option>
+					<option value="">40代</option>
+					<option value="">50代</option>
+					<option value="">60代</option>
+					<option value="">70代</option>
+					<option value="">80代~</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<label for="">性別</label>
+				<input type="radio" name="" id="">男性
+				<input type="radio" name="" id="">女性
+			</div>
+			<div class="form-group">
+				<label for="">映画タイトル</label>
+				<input type="text" name="" id="" class="textbox form-control">
+			</div>
+			<div class="form-group">
+				<label for="">文</label>
+				<textarea name="" id="" cols="30" rows="10" class="textbox form-control"></textarea>
+			</div>
+			<button type="submit" class="textbox form-control">送信する</button>
+		</form>
+	</section>
 
 	<footer>
         <p>copyright &copy; 2019 HAL Cinema</p>
-    </footer>
+	</footer>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
