アクセス一旦完

--- a/access.html
+++ b/access.html
@@ -49,20 +49,20 @@
         <div class="about">
             <h3>施設情報</h3>
             <div class="add">
-                <h4>住所</h4>
+                <h4>・住所</h4>
                 <p>〒558-0004　大阪府大阪市住吉区長居東１丁目７−１７</p>
             </div>
             <div class="tel">
-                <h4>電話番号</h4>
+                <h4>・電話番号</h4>
                 <p>06ー6347ー1818</p>
             </div>
             <div class="car">
-                <h4>駐車場・駐輪場</h4>
+                <h4>・駐車場＆駐輪場</h4>
                 <p>駐車場、駐輪場はないため、公共交通機関ウィご利用ください。</p>
             </div>
             <div class="cache">
-                <h4>payment</h4>
-                <p>支払い方法：現金のみ</p>
+                <h4>・支払い方法</h4>
+                <p>現金のみ</p>
             </div>
         </div>
     </section>
