indexへのlinkを全てindex.htmlに共通

--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,11 @@
 <html lang="ja" dir="ltr">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>HALCinema</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap"
-          rel="stylesheet">
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/unity.css">
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
@@ -16,36 +16,36 @@
 </head>
 
 <body>
-<header>
-    <h1><a href="index.html">HAL Cinema</a></h1>
-    <div id="nav-toggle">
-        <div>
-            <span></span>
-            <span></span>
-            <span></span>
+    <header>
+        <h1><a href="index.html">HAL Cinema</a></h1>
+        <div id="nav-toggle">
+            <div>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
-    </div>
-    <div id="gloval-nav">
-        <nav>
-            <ul id="navigation">
-                <li><a href="#">トップページ</a></li>
-                <li><a href="roadshow.html">上映中作品</a></li>
-                <li><a href="nextRoadshow.html">公開予定作品</a></li>
-                <li><a href="#">アンケート</a></li>
-                <li><a href="#">アクセス</a></li>
-                <li><a href="contact.html">お問い合わせ</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-<h1>お問い合わせ</h1>
-<form action="" method="post">
-    お問い合わせ内容<br>
-    <textarea cols="100" rows="10" name="contactText"></textarea><br>
-    メールアドレス<br>
-    <span style="color: red;font-size: 0.5em;">返信が必要な方のみ</span><br>
-    <input type="email" name="email"><br>
-</form>
+        <div id="gloval-nav">
+            <nav>
+                <ul id="navigation">
+                    <li><a href="index.html">トップページ</a></li>
+                    <li><a href="roadshow.html">上映中作品</a></li>
+                    <li><a href="nextRoadshow.html">公開予定作品</a></li>
+                    <li><a href="#">アンケート</a></li>
+                    <li><a href="#">アクセス</a></li>
+                    <li><a href="contact.html">お問い合わせ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <h1>お問い合わせ</h1>
+    <form action="" method="post">
+        お問い合わせ内容<br>
+        <textarea cols="100" rows="10" name="contactText"></textarea><br>
+        メールアドレス<br>
+        <span style="color: red;font-size: 0.5em;">返信が必要な方のみ</span><br>
+        <input type="email" name="email"><br>
+    </form>
 </body>
 
 </html>
