--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="gloval-nav">
             <nav>
                 <ul id="navigation">
-                    <li><a href="#">トップページ</a></li>
+                    <li><a href="index.html">トップページ</a></li>
                     <li><a href="roadshow.html">上映中作品</a></li>
                     <li><a href="nextRoadshow.html">公開予定作品</a></li>
                     <li><a href="survey.html">アンケート</a></li>
