--- a/survey.html
+++ b/survey.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<header>
-		<h1><a href="index.html">HAL Cinema</a></h1>
+		<h1 id="title"><a href="index.html">HAL Cinema</a></h1>
         <div id="nav-toggle">
             <div>
                 <span></span>
@@ -58,11 +58,16 @@
 					<option value="">80代~</option>
 				</select>
 			</div>
-			<div class="form-group">
-				<label for="">性別</label>
-				<input type="radio" name="" id="">男性
-				<input type="radio" name="" id="">女性
+			<label for="">性別</label>
+			<div class="form-check">
+				<input type="radio" name="gender" id="" class="form-check-input">
+				<label class="form-check-label" for="exampleRadios1">男性</label>
 			</div>
+			<div class="form-check">
+				<input type="radio" name="gender" id="" class="form-check-input">
+				<label class="form-check-label" for="exampleRadios1">女性</label>
+			</div>
+			<br>
 			<div class="form-group">
 				<label for="">映画タイトル</label>
 				<input type="text" name="" id="" class="textbox form-control">
