--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,17 @@
 <html lang="ja" dir="ltr">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>HALCinema</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap"
-          rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/unity.css">
-    <link rel="stylesheet" type="text/css" href="./css/hamburger.css">
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <!-- <link rel="stylesheet" type="text/css" href="./css/slider.css"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>お問い合わせ</title>
+    <link rel="stylesheet" type="text/css" href="css/unity.css">
+    <link rel="stylesheet" type="text/css" href="css/hamburger.css">
+    <link rel="stylesheet" type="text/css" href="css/survey.css">
     <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="./js/hamburger.js"></script>
 </head>
@@ -38,14 +40,25 @@
         </nav>
     </div>
 </header>
-<h1>お問い合わせ</h1>
-<form action="" method="post">
-    お問い合わせ内容<br>
-    <textarea cols="100" rows="10" name="contactText"></textarea><br>
-    メールアドレス<br>
-    <span style="color: red;font-size: 0.5em;">返信が必要な方のみ</span><br>
-    <input type="email" name="email"><br>
-</form>
+<section>
+    <h2>お問い合わせ</h2>
+    <form action="" method="post">
+        <div class="form-group">
+            <label for="">お問い合わせ内容</label>
+            <textarea name="contactText" class="textbox form-control" cols="100" rows="10"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="">メールアドレス</label>
+            <input type="email" name="" id="" class="textbox form-control">
+            <small class="text-muted">返信が必要な場合のみ</small>
+        </div>
+        <button type="submit" class="textbox form-control">送信する</button>
+    </form>
+</section>
+
+<footer>
+    <p>copyright &copy; 2019 HAL Cinema</p>
+</footer>
 </body>
 
 </html>
