--- a/access.html
+++ b/access.html
@@ -52,6 +52,10 @@
                 <h4>・住所</h4>
                 <p>〒558-0004　大阪府大阪市住吉区長居東１丁目７−１７</p>
             </div>
+            <div class="acc">
+                <h4>・アクセス情報</h4>
+                <p>ながい公園 駅から 徒歩5分</p>
+            </div>
             <div class="tel">
                 <h4>・電話番号</h4>
                 <p>06ー6347ー1818</p>
