--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <section class="calen">
             <h2>上映カレンダー</h2>
-            <div class="movie">
+            <div class="movie jurassicworld2">
                 <h3><a href="">ジュラシックワールド　炎の王国</a></h3>
                 <div class="flexbox">
                     <div>10:15 ~</div>
@@ -114,5 +114,12 @@
         <p>copyright &copy; 2019 HAL Cinema</p>
     </footer>
 </body>
+
+<style>
+    .jurassicworld2 {
+        background-image: url(./img/honoo.jpg);
+        background-size: 100%;
+    }
+</style>
 
 </html>
